--- a/locales/es.json
+++ b/locales/es.json
@@ -14,6 +14,8 @@
     "sellPriceLabel": "💰 Precio de Venta (por unidad)",
     "feeLabel": "🧾 Tarifa ({percent}%)",
     "profitLabel": "🤑 Beneficio",
+    "cookTimeLabel": "⏱️ Tiempo de Cocción",
+    "bagSlotsLabel": "🎒 Espacios Necesarios en la Mochila",
     "levelLabel": "Nivel",
     "secondsSuffix": "s",
     "unitAbbr": "(artículos)",
